<resources>
    <string name="app_name">Community App</string>


    <string name="go_to_next_activity">Go to next activity</string>
    <string name="upload_video">Upload Video</string>
    <string name="sos">SOS</string>
    <string name="location">Location</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string name="button">Button</string>
    <string name="send_sos_email">Send SOS Email</string>
    <string name="welcome_you_are_logged_in">Welcome! You are logged in</string>
    <string name="invalid_text">Invalid Text</string>
    <string name="information_unavailable">Information unavailable</string>
    <string name="sign_out">Sign Out</string>
    <string name="or">--------------OR--------------</string>
    <string name="already_have_an_account_login_here">Already Have an Account? Login Here</string>
    <string name="sign_up">SIGN UP</string>
    <string name="forgot_password_click_here">Forgot Password? Click Here</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_email">Enter Email</string>
    <string name="reset">Reset</string>
    <string name="log_in">Log In</string>
    <string name="not_registered_sign_up_here">Not Registered? Sign Up Here</string>
    <string name="choose_file">Choose File</string>
    <string name="upload">Upload</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="upload_progresss">Upload Progress:</string>
    <string name="file_name_no_file_chosen">File Name: No file chosen</string>
    <string name="play">Play</string>
    <string name="sign_in_with_google">Sign In With Google</string>
    <string name="ortext">ortext</string>
    <string name="entering_email">Entering email</string>
    <string name="login_page">Login Page</string>
    <string name="just_a_box">Just A Box</string>
    <string name="app_logo">App Logo</string>
    <string name="mp_police_logo">Mp Police Logo</string>
    <string name="entering_password">Entering Password</string>
    <string name="entering_email1">Entering Email</string>
    <string name="title_activity_maps">Map</string>
    <string name="click_here_to_go_to_next_activity">Click here to go to next activity</string>
    <string name="back">Back</string>
    <string name="display_n_nearby_n_police_stations">Display\n Nearby\n Police stations</string>
    <string name="display_n_nearby_hospitals">Display\n nearby hospitals</string>
    <string name="view_your_location_on_map">View Your Location On Map</string>
</resources>
