<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white2"
    tools:context=".ResetActivity">

    <ImageView
        android:id="@+id/appLogo"
        android:layout_width="148dp"
        android:layout_height="90dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="94dp"
        android:contentDescription="@string/app_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/applogo" />

    <ImageView
        android:id="@+id/mpPolicelogo"
        android:layout_width="96dp"
        android:layout_height="112dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="90dp"
        android:contentDescription="@string/mp_police_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/appLogo"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/mppolicelogo" />


    <EditText
        android:id="@+id/userEmail"
        android:layout_width="222dp"
        android:layout_height="40dp"
        android:layout_marginStart="84dp"
        android:layout_marginEnd="85dp"
        android:autofillHints=""
        android:background="@drawable/mailboxreset"
        android:contentDescription="@string/entering_email1"
        android:ems="10"
        android:hint="abc@example.com"
        android:inputType="textEmailAddress"
        android:paddingStart="50dp"
        android:paddingEnd="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.638" />

    <Button
        android:id="@+id/buttonLogIn"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/sumbitreset"
        android:text="@string/reset"
        android:textColor="@color/white"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.29" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="322dp"
        android:layout_height="194dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/userEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appLogo"
        app:srcCompat="@drawable/resetmessage" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="97dp"
        android:layout_height="15dp"
        android:layout_marginStart="234dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="81dp"
        android:layout_marginBottom="174dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogIn"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/backtologin" />

</androidx.constraintlayout.widget.ConstraintLayout>
