<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="413dp"
        android:layout_height="500dp"
        android:layout_marginTop="72dp"
        map:layout_constraintBottom_toBottomOf="parent"
        map:layout_constraintEnd_toEndOf="parent"
        map:layout_constraintHorizontal_bias="1.0"
        map:layout_constraintStart_toStartOf="parent"
        map:layout_constraintTop_toTopOf="parent"
        map:layout_constraintVertical_bias="0.0"
        tools:context=".MapsActivity" />

    <Button
        android:id="@+id/button2"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="308dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/choosefile"
        android:onClick="onButtonPressed"
        android:text="@string/back"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        map:layout_constraintBottom_toTopOf="@+id/map"
        map:layout_constraintEnd_toEndOf="parent"
        map:layout_constraintHorizontal_bias="0.0"
        map:layout_constraintStart_toStartOf="parent"
        map:layout_constraintTop_toTopOf="parent"
        map:layout_constraintVertical_bias="0.285" />

    <Button
        android:id="@+id/button4"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="43dp"
        android:layout_marginBottom="56dp"
        android:background="@drawable/choosefile"
        android:onClick="onButtonPressed"
        android:text="@string/display_n_nearby_hospitals"
        android:textColor="#FFFFFF"
        map:layout_constraintBottom_toBottomOf="parent"
        map:layout_constraintEnd_toEndOf="parent"
        map:layout_constraintHorizontal_bias="0.061"
        map:layout_constraintStart_toStartOf="parent"
        map:layout_constraintTop_toBottomOf="@+id/map" />

    <Button
        android:id="@+id/button5"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="43dp"
        android:layout_marginBottom="56dp"
        android:background="@drawable/choosefile"
        android:onClick="onButtonPressed"
        android:text="@string/display_n_nearby_n_police_stations"
        android:textColor="#FFFFFF"
        map:layout_constraintBottom_toBottomOf="parent"
        map:layout_constraintEnd_toEndOf="parent"
        map:layout_constraintHorizontal_bias="0.938"
        map:layout_constraintStart_toStartOf="parent"
        map:layout_constraintTop_toBottomOf="@+id/map" />

</androidx.constraintlayout.widget.ConstraintLayout>
